--- a/module2-solution/css/style.css
+++ b/module2-solution/css/style.css
@@ -1,1 +1,200 @@
+* {
+  box-sizing: border-box;
+}
+h1 {
+  text-align: center;
+}
+
+/********* Media Screens *******/
+
+/*Desktop*/
+@media (min-width: 992px) {
+  .box1 {
+    border: 4px solid black;
+    width: 30%;
+    float: left;
+    background-color: #999999;
+    margin-left: 25px;
+  }
+  .box2 {
+    border: 4px solid black;
+    width: 30%;
+    float: left;
+    background-color: #999999;
+    margin-left: 25px;
+  }
+  .box3 {
+    border: 4px solid black;
+    width: 30%;
+    float: left;
+    background-color: #999999;
+    margin-left: 25px;
+  }
+  .inside {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #d59898;
+    font-weight: bold;
+    width: 30%;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+  .inside2 {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #c14543;
+    font-weight: bold;
+    width: 30%;
+    color: white;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+
+  .inside3 {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #e5d198;
+    font-weight: bold;
+    width: 30%;
+    float: right;
+    border-top: none !important;
+  }
+
+  p {
+    padding: 20px;
+    font-weight: 600;
+  }
+}
+
+/*Tablet*/
+@media (min-width: 768px) and (max-width: 991px) {
+  .box1 {
+    border: 4px solid black;
+    width: 45%;
+    float: left;
+    background-color: #999999;
+    margin-left: 25px;
+    position: relative;
+  }
+  .box2 {
+    border: 4px solid black;
+    width: 45%;
+    float: left;
+    background-color: #999999;
+    margin-left: 25px;
+    position: relative;
+  }
+  .box3 {
+    border: 4px solid black;
+    width: 91.5%;
+    background-color: #999999;
+    margin-left: 25px;
+    position: absolute;
+    top: 68%;
+  }
+  .inside {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #d59898;
+    font-weight: bold;
+    width: 30%;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+  .inside2 {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #c14543;
+    font-weight: bold;
+    width: 30%;
+    color: white;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+
+  .inside3 {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #e5d198;
+    font-weight: bold;
+    width: 30%;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+
+  p {
+    padding: 20px;
+    font-weight: 600;
+  }
+}
+
+/*Mobile*/
+@media (max-width: 767px) {
+  .box1 {
+    border: 4px solid black;
+    width: 91%;
+    background-color: #999999;
+    margin-left: 25px;
+  }
+  .box2 {
+    border: 4px solid black;
+    width: 91%;
+    background-color: #999999;
+    margin-left: 25px;
+    margin-top: 25px;
+  }
+  .box3 {
+    border: 4px solid black;
+    width: 91%;
+    background-color: #999999;
+    margin-left: 25px;
+    margin-top: 25px;
+  }
+  .inside {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #d59898;
+    font-weight: bold;
+    width: 30%;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+  .inside2 {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #c14543;
+    font-weight: bold;
+    width: 30%;
+    color: white;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+
+  .inside3 {
+    border: 2px solid black;
+    text-align: center;
+    background-color: #e5d198;
+    font-weight: bold;
+    width: 30%;
+    float: right;
+    border-top: none !important;
+    position: relative;
+  }
+
+  p {
+    padding: 20px;
+    font-weight: 600;
+  }
+
+  .row {
+    padding: 50px;
+  }
+}
 
