--- a/mod3_solution/css/style.css
+++ b/mod3_solution/css/style.css
@@ -1,30 +1,24 @@
 .navbar-default {
-  background-color: #f8f8f8;
+  background-color: #e6cece;
   border-color: #e7e7e7;
 }
-.navbar-toggle {
-  @media (min-width: 768px) {
-    display: none !important;
-  }
-}
-.navbar-nav a:hover, .navbar-nav a: focus {
+
+.navbar-default a:hover,
+.navbar-default a:focus {
   text-decoration: none;
   color: #0000;
   text-align: center;
 }
 
-.navbar-collapse {
+.navbar-nav {
   text-align: center;
 }
 h5 {
   text-align: center;
   padding-top: 5px;
-  color: red;
+  color: rgb(214, 191, 116);
 }
-.col-xs-12{
-  border: 2px solid red;
-  padding: 10px;
-}
+
 #main-content {
   padding: 10px;
 }
@@ -33,15 +27,21 @@ h5 {
   padding-top: 10px;
 }
 .text-center {
-  font-size: 1.9em;
-  padding-top: 10px;
-  color: blue;
+  padding-top: 20px;
+  color: rgba(78, 78, 172, 0.647);
+  margin: 0 auto;
 }
 
-@media (max-width: 576px) {
-  .col-xs-12 {
-    width: 80%;
-    margin-left: 50px;
+@media (min-width: 768px) {
+  .navbar-toggle {
+    display: none;
   }
 }
 
+.navbar-toggle {
+  border: 2px solid rgb(255, 102, 203);
+  border-radius: 4px;
+  width: 25px;
+  height: 25px;
+  background-color: lightseagreen;
+}
